# financial_pipeline

./: extract_raw_data.py  pyproject.toml
dbt/: dbt_project.yml
dbt/models/: sources.yml
dbt/models/marts/: fct_financial_metrics.sql  schema.yml
dbt/models/staging/: schema.yml  stg_financials.sql
financial_pipeline/: dbt_project.yml
src/financial_pipeline/: __init__.py  extract.py  load.py  main.py  metrics.py
tests/: test_metrics.py
